2009-07-20  Chong Yidong  <cyd@stupidchicken.com>

	* term/pc-win.el (x-display-name, x-colors)
	(x-select-enable-clipboard): Doc fix.

	* term/common-win.el (x-display-name, x-colors): Doc fix.

	* w32-vars.el (x-select-enable-clipboard): Doc fix.

	* term/ns-win.el (x-select-text, x-setup-function-keys, x-colors)
	(xw-defined-colors): Doc fix.

	* w32-fns.el (x-select-text, x-setup-function-keys): Doc fix.

	* term/x-win.el (x-select-text, x-setup-function-keys)
	(x-select-enable-clipboard, xw-defined-colors): Doc fix.

2009-07-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/vt420.el (terminal-init-vt420): Fix typo.

2009-07-19  Alan Mackenzie  <acm@muc.de>

	* files.el (hack-local-variables-filter): Revert
	yesterday's change.

	* progmodes/cc-mode.el (c-before-hack-hook),
	(c-postprocess-file-styles): Revert yesterday's changes.

2009-07-18  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-before-hack-hook),
	(c-postprocess-file-styles): Give invocation of `c-set-style'
	DONT-OVERRIDE parameter of t.  Already set style variables will
	thus not be overridden by style settings given by `c-file-syle'.

	* files.el (hack-local-variables-filter): Remove entries with
	duplicate keys from `file-local-variables-alist'.

	* files.el (set-auto-mode): (setq name) -> (setq name nil).

2009-07-18  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (region-active-p, use-region-p): Doc fix (Bug#3873).

2009-07-17  Kenichi Handa  <handa@m17n.org>

	* case-table.el (describe-buffer-case-table): Fix for the case
	that KEY is a cons.

2009-07-16  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/ns-win.el (ns-set-alpha): Don't declare.
	(ns-set-background-alpha): Remove function.

2009-07-15  Kenichi Handa  <handa@m17n.org>

	* international/mule-cmds.el (set-language-environment-charset):
	If coding-system-charset-list returns `iso-2022' or `emacs-mule',
	ignore them.

	* language/misc-lang.el ("IPA"): Change coding systems to utf-8.
	Delete unibyte-display.
