@@ -1,3 +1,11 @@
+2009-07-21  Chong Yidong  <cyd@stupidchicken.com>
+
+	* mail/rmailedit.el (rmail-edit-mode): Set
+	auto-save-include-big-deletions to t.
+
+	* mail/rmail.el (rmail-variables): Set
+	auto-save-include-big-deletions to t.
+
 2009-07-20  Chong Yidong  <cyd@stupidchicken.com>
 
 	* term/pc-win.el (x-display-name, x-colors)
